# FourCorners-JustNLP-MT-Shared-Task

./: .gitignore  EVALUATION_GUIDE.md  GRPO_SETUP_GUIDE.md  README.md  pyproject.toml
conf/: grpo_qwen3_32b_config_bleu.yaml  grpo_qwen3_32b_config_bleu_chrf_rouge.yaml  grpo_qwen3_32b_config_chrf.yaml  grpo_qwen3_32b_config_rouge.yaml  sft_qwen3_32b_config.yaml  sft_qwen3_32b_full_config.yaml
script/: eval_qwen3_baseline_test.py  eval_qwen3_test.py  grpo_qwen3.py  sft_qwen3.py
