[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "fastapi>=0.118.0",
    "flagembedding>=1.3.5",
    "jinja2>=3.1.6",
    "jsonlines>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy==2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "spacy>=3.8.7",
    "stanza>=1.10.1",
    "trl==0.23.0",
    "unsloth==2025.9.11",
    "unsloth-zoo==2025.9.14",
    "vllm==0.8.5.post1",
    "wandb>=0.22.1",
]
